<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SLUA Mobile</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="server_address">http://slua.deri.ie:8080</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button_login">Sign In</string>

    <string name="title_activity_task_list">Available tasks</string>
    <string name="title_activity_task_detail">Instructions</string>

    <string name="task_title">Task Title</string>
    <string name="task_description">Description</string>
    <string name="task_answer">Your Photo</string>
    <string name="task_location">Location Map</string>
    <string name="task_description_title">Description</string>

    <string name="login_button_description">login button</string>
    <string name="task_icon_description">task icon</string>
    <string name="camera_image_description">camera</string>
    <string name="map_image_description">map</string>

</resources>
