<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|top"
        android:orientation="vertical">

        <TextView
            style="@style/TextHead"
            android:id="@+id/task_title"
            android:text="@string/task_title"
            android:layout_gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff" />

        <TextView
            style="@style/TextBody"
            android:text="@string/task_location" />

        <ImageView
            android:id="@+id/task_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:contentDescription="@string/map_image_description"
            android:src="@drawable/map_img"/>

        <TextView
            style="@style/TextBody"
            android:text="@string/task_description_title"/>

        <TextView
            style="@style/TextBody"
            android:id="@+id/task_description"
            android:layout_gravity="center"
            android:text="@string/task_description" />

        <TextView
            style="@style/TextBody"
            android:text="@string/task_answer" />

        <ImageView
            android:id="@+id/photo_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/camera_image_description"
            android:src="@drawable/camera" />

    </LinearLayout>
</ScrollView>